Fix issue with navbar on mobile

--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -104,6 +104,7 @@ div.masthead h3 {
 
 .glyphicon-star, .glyphicon-star-empty {
   color: goldenrod;
+  font-size: 18px;
 }
 
 .dolar-full {
