--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -39,20 +39,6 @@ body {
 
 
 
-/* Custom page header */
-.header {
-  position: relative;
-}
-
-.navbar{
-  background: none;
-
-  border: none;
-  margin:0;
-}
-.navbar-fixed-top{
-  position: absolute;
-}
 
 
 /* Custom page footer */
@@ -252,14 +238,7 @@ select.input-lg {
   outline: none;
 }
 
-.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus{
-  color: coral;
-  background-color: transparent;
-}
 
-.navbar-inverse .navbar-brand:hover{
-  color: gray;
-}
 
 a:hover, a:focus{
   color: coral;
