--- a/app/styles/restaurant.css
+++ b/app/styles/restaurant.css
@@ -129,6 +129,7 @@ hr {
 
 .glyphicon-star, .glyphicon-star-empty{
   color: goldenrod;
+  font-size: 18px;
 }
 
 .dolar-full{
